# F4SEMenuFramework

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  ModDescription.md  PLUGIN_DEVELOPMENT_GUIDE.md  README.md  Usage.md  vcpkg.json
cmake/lib/: automaticGameFolderOutput.cmake  copyOutputs.cmake
imgui/: imgui.cpp
imgui/backends/: imgui_impl_dx11.cpp
include/: Application.h  BlurEffect.h  Config.h  Event.h  F4SEMenuFramework.h  FontManager.h  GameLock.h  GamepadGlyphs.h  GamepadInput.h  Hooks.h  HotkeyManager.h  Input.h  InputEventHandler.h  PCH.h  PauseMenuButton.h  Renderer.h  TextureLoader.h  Theme.h  UI.h  Utils.h  WelcomeBanner.h  WindowManager.h  logger.h
include/MCM/: FallUIHudArt.h  FallUIHudEditor.h  MCMConfigParser.h  MCMConflictCheck.h  MCMJsonSanitizer.h  MCMKeybindStore.h  MCMKeybindTranslator.h  MCMLiveSync.h  MCMPapyrusAPI.h  MCMPapyrusDispatch.h  MCMRegistry.h  MCMScanner.h  MCMTranslation.h  MCMValueProvider.h  MCMWidgetRenderer.h  PapyrusFunctionArgs.h  SWFLibraryImage.h  SWFParseCommon.h  SWFVectorMovie.h
public/F4SE/plugins/: F4SEMenuFramework.ini  F4SEMenuFrameworkStrings.json
public/F4SE/plugins/F4SEMenuFramework/Themes/: README.md  modern.json  starfield.json
public/F4SE/plugins/F4SEMenuFrameworkThemes/: classic.json  fallout4.json  fallout4_highvis_black.json  fallout4_highvis_white.json  modern.json  skyrimDefault.json
resources/: F4SEMenuFramework.h
src/: Application.cpp  BlurEffect.cpp  Config.cpp  Event.cpp  F4SEMenuFramework.cpp  FontManager.cpp  GameLock.cpp  GamepadGlyphs.cpp  GamepadInput.cpp  Hooks.cpp  HotkeyManager.cpp  HudManager.cpp  Input.cpp  PauseMenuButton.cpp  Renderer.cpp  TextureLoader.cpp  Theme.cpp  Translations.cpp  UI.cpp  Utils.cpp  WelcomeBanner.cpp  WindowManager.cpp  cimgui.cpp  plugin.cpp
src/MCM/: FallUIHudArt.cpp  FallUIHudEditor.cpp  MCMConfigParser.cpp  MCMConflictCheck.cpp  MCMKeybindStore.cpp  MCMKeybindTranslator.cpp  MCMLiveSync.cpp  MCMPapyrusAPI.cpp  MCMPapyrusDispatch.cpp  MCMRegistry.cpp  MCMScanner.cpp  MCMTranslation.cpp  MCMValueProvider.cpp  MCMWidgetRenderer.cpp  SWFLibraryImage.cpp  SWFParseCommon.cpp  SWFVectorMovie.cpp
swf/: F4SEFramework.swf  build.ps1
swf/src/: F4SEFrameworkPause.as
swf/test/: _rva2id.py  build_falluitest.bat  build_fonttest.bat  build_jsontest.bat  build_swftest.bat  build_trtest.bat  extract_textfields.py  falluitest.cpp  fonttest.cpp  jsontest.cpp  swftest.cpp  threadstack.cpp  trtest.cpp
swf/test/fakes/MCM/: FallUIHudArt.h  MCMValueProvider.h
swf/test/fakes/RE/: Fallout.h
tools/: process_glyphs.py
